analytics functionality is fixed